# GoogleTest_Demo

./: .gitignore  .gitmodules
0_minimal/: README.md  calculator.cpp  calculator_test.cpp  main.cpp
1_fixture-cmake-submodule/: CMakeLists.txt  README.md  vectorInt.h
1_minimal/: calculator.h  calculator_test  calculator_test.cpp  main.cpp
2_fixture-cmake-submodule/: README.md  vectorInt.cpp  vectorInt_test.cpp
3_mock/: CMakeLists.txt  InflationTracker.cpp  InflationTracker.h  InflationTracker_test.cpp  PriceDatabaseAPI.cpp  PriceDatabaseAPI.h  README.md  main.cpp
